middlewares/jwt/entraid/customers/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: customers-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`customers.airlines.traefik`) || Host(`customers.airlines.traefik.localhost`)
      services:
        - name: customers-app
          port: 3000
      middlewares:
        - name: jwt-entra-id
